--- a/aboutme/templates/work.html
+++ b/aboutme/templates/work.html
@@ -65,14 +65,29 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="{{MEDIA_URL}}{{me.photo.url}}" alt="" style="width: 256px; height: 256px; border-radius:50%;">
-                    <div class="intro-text">
-                        <span class="name">{{me.first_name}} {{me.second_name}}</span>
-                        <hr class="star-light">
-                        <span class="skills">Программист - Аналитик - Менеджер проектов</span>
+                <div class="col-lg-12 text-center">
+                  <h2>Опыт работы</h2>
+                  <hr class="star-light">
+                </div>
+                {% for place in work_places %}
+                <div class="col-lg-4 text-right">
+                    <div>
+                      <h3>{{place.started_in}} -
+                        {% if place.end_date == 2016 %}
+                        {{place.end_date}}
+                        {% else %}
+                        н.в.
+                        {% endif %}
+                      </h3>
                     </div>
                 </div>
+                <div class="col-lg-8 text-left">
+                    <div>
+                      <h3>{{place.company}}</h3>
+                      <p>{{place.position}}</p>
+                    </div>
+                </div>
+                {% endfor %}
             </div>
         </div>
     </header>
