change gitignore file change locale language change admin regexp add site field to education and work place models add site urls to templates add custom css file add materials of second lesson

--- a/aboutme/templates/education.html
+++ b/aboutme/templates/education.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="col-lg-8 text-left">
                     <div>
-                      <h3>{{place.place}}</h3>
+                      <h3><a href="{{place.site}}">{{place.place}}</a></h3>
                       <p>{{place.specialization}}</p>
                     </div>
                 </div>
