--- a/aboutme/templates/work.html
+++ b/aboutme/templates/work.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="col-lg-8 text-left">
                     <div>
-                      <h3>{{place.company}}</h3>
+                      <h3><a href="{{place.site}}">{{place.company}}</a></h3>
                       <p>{{place.position}}</p>
                     </div>
                 </div>
