add hobby model

--- a/aboutme/templates/base.html
+++ b/aboutme/templates/base.html
@@ -53,6 +53,9 @@
                         <a href="/work/">Опыт работы</a>
                     </li>
                     <li>
+                        <a href="/hobby/">Хобби</a>
+                    </li>
+                    <li>
                         <a href="#contacts">Контакты</a>
                     </li>
                 </ul>
