add fields to work place model add template for work_place

--- a/aboutme/homepage/static/css/custom.css
+++ b/aboutme/homepage/static/css/custom.css
@@ -9,3 +9,14 @@ h3 > a:hover{
 #hobby-photo img{
   width: 200px;
 }
+table {
+  font-size: 20px;
+}
+
+td {
+  padding-left: 20px;
+}
+
+td > a, td > a:hover {
+  color: #fff;
+}
